--- a/package.json
+++ b/package.json
@@ -4,9 +4,19 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "@nx/nest": "^19.8.4",
+    "axios": "^1.6.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nuxt/devtools": "1.0.0",
     "@nuxt/eslint-config": "~0.5.6",
     "@nuxt/kit": "^3.10.0",
@@ -14,14 +24,18 @@
     "@nx/cypress": "19.8.4",
     "@nx/eslint": "19.8.4",
     "@nx/eslint-plugin": "19.8.4",
+    "@nx/jest": "19.8.4",
     "@nx/js": "19.8.4",
+    "@nx/node": "19.8.4",
     "@nx/nuxt": "19.8.4",
     "@nx/vite": "19.8.4",
     "@nx/web": "19.8.4",
+    "@nx/webpack": "19.8.4",
     "@nx/workspace": "19.8.4",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vitest/coverage-v8": "^1.0.4",
@@ -32,11 +46,15 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^3.5.0",
     "h3": "^1.8.2",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
     "nuxt": "^3.10.0",
     "nx": "19.8.4",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
@@ -44,6 +62,7 @@
     "vitest": "^1.3.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
-    "vue-tsc": "^2.0.0"
+    "vue-tsc": "^2.0.0",
+    "webpack-cli": "^5.1.4"
   }
 }
