--- a/package.json
+++ b/package.json
@@ -5,11 +5,22 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-comprehend": "^3.665.0",
+    "@google-cloud/language": "^6.5.0",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-express": "^10.4.4",
     "@nx/nest": "^19.8.4",
+    "@types/pdf-parse": "^1.1.4",
     "axios": "^1.6.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "i18n": "^0.15.1",
+    "multer": "^1.4.5-lts.1",
+    "nestjs-i18n": "^10.4.9",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
@@ -35,7 +46,9 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.12",
+    "@types/multer": "^1.4.12",
     "@types/node": "18.16.9",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vitest/coverage-v8": "^1.0.4",
