--- a/apps/backend/tsconfig.app.json
+++ b/apps/backend/tsconfig.app.json
@@ -8,5 +8,9 @@
     "target": "es2021"
   },
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/app/resume/dto/analyze-resume.dto.ts",
+    "../../shared/src/lib/dtos/technology.dto.ts"
+  ]
 }
