--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "dependencies": {
     "@aws-sdk/client-comprehend": "^3.665.0",
     "@google-cloud/language": "^6.5.0",
+    "@nestjs/axios": "^3.0.3",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.4.4",
     "@nx/nest": "^19.8.4",
     "@types/pdf-parse": "^1.1.4",
-    "axios": "^1.6.0",
+    "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "i18n": "^0.15.1",
