Adding sagemaker as a LLM provider

--- a/apps/backend/env.example
+++ b/apps/backend/env.example
@@ -1,7 +1,15 @@
 ENVIRONMENT=local
 MAX_FILE_SIZE=10485760
 
-# aws credentials
+LLM_PROVIDER='aws'
+NLP_PROVIDER='aws'
+
 AWS_KEY=
 AWS_SECRET=
-AWS_REGION="us-east-1"
+AWS_REGION=
+
+COHERE_URL=
+COHERE_API_KEY=
+COHERE_MAX_TOKENS=100
+COHERE_TEMPERATURE=0.7
+COHERE_MODEL='command-light'
