Adding openai as provider

--- a/apps/backend/env.example
+++ b/apps/backend/env.example
@@ -13,3 +13,14 @@ COHERE_API_KEY=
 COHERE_MAX_TOKENS=100
 COHERE_TEMPERATURE=0.7
 COHERE_MODEL='command-light'
+
+
+OPENAI_URL=
+OPENAI_API_KEY=
+OPENAI_MODEL=
+OPENAI_MAX_TOKENS=1000
+OPENAI_TEMPERATURE=0.7
+
+CUSTOM_URL=
+CUSTOM_SUFIX='/generate'
+CUSTOM_API_KEY=
