--- a/nx.json
+++ b/nx.json
@@ -70,7 +70,7 @@
   ],
   "targetDefaults": {
     "e2e-ci--**/*": {
-      "dependsOn": ["^build-static"]
+      "dependsOn": ["^build-static", "^build"]
     },
     "@nx/js:tsc": {
       "cache": true,
