--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@aws-sdk/client-comprehend": "^3.665.0",
     "@aws-sdk/client-sagemaker-runtime": "^3.665.0",
     "@google-cloud/language": "^6.5.0",
+    "@mdi/font": "^7.4.47",
     "@nestjs/axios": "^3.0.3",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.2.3",
@@ -19,12 +20,17 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "i18n": "^0.15.1",
+    "lucide-vue-next": "^0.451.0",
     "multer": "^1.4.5-lts.1",
     "nestjs-i18n": "^10.4.9",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "vue-feather-icons": "^5.1.0",
+    "vue3-smooth-scroll": "^0.8.1",
+    "vuetify": "^3.7.0-beta.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -42,6 +48,7 @@
     "@nx/node": "19.8.4",
     "@nx/nuxt": "19.8.4",
     "@nx/vite": "19.8.4",
+    "@nx/vue": "19.8.4",
     "@nx/web": "19.8.4",
     "@nx/webpack": "19.8.4",
     "@nx/workspace": "19.8.4",
@@ -56,6 +63,7 @@
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "@vue/test-utils": "^2.4.1",
+    "autoprefixer": "^10.4.20",
     "cypress": "^13.13.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -66,8 +74,11 @@
     "jsdom": "~22.1.0",
     "nuxt": "^3.10.0",
     "nx": "19.8.4",
+    "postcss": "^8.4.47",
     "prettier": "^2.6.2",
-    "sass": "1.62.1",
+    "sass": "^1.79.4",
+    "sass-loader": "^16.0.2",
+    "tailwindcss": "^3.4.13",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
@@ -75,8 +86,8 @@
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.0",
     "vitest": "^1.3.1",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
+    "vue": "^3.5.11",
+    "vue-router": "^4.4.5",
     "vue-tsc": "^2.0.0",
     "webpack-cli": "^5.1.4"
   }
